--- a/flique/www/templates/profile.html
+++ b/flique/www/templates/profile.html
@@ -1,7 +1,19 @@
 <ion-view view-title={{profile.firstName}}>
   <ion-content>
-        <div >
-            <img class="profile-picture" src="{{profile.image}}"/> 
+        <div class="profile-div">
+            <div class="profile-header">
+                
+                <img class="profile-picture" src="{{profile.image}}"/> 
+                <div class="profile-info" style="margin-left: 20px;margin-top: 5px;">
+                    <h3>{{profile.firstName}} {{profile.LastName}}</h3> 
+                    <h5>{{profile.work_place}} </h5>
+                    <h5>{{profile.flique_number}} Total fliQues</h5>
+                </div>
+            </div>
+            
+            <div class="profile-personal-info" style="margin-top: 8px;">
+                {{profile.personal_info}}
+            </div>
         </div>
     </ion-content>
 </ion-view>
