--- a/flique/www/css/style.css
+++ b/flique/www/css/style.css
@@ -1,9 +1,24 @@
 /* Empty. Add your own CSS if you like */
 
 .profile-picture{
-	width: 150px;
-	height: 150px;
+	width: 125px;
+	height: 125px;
 	border-radius: 75px;
 	-webkit-border-radius: 75px;
 	-moz-border-radius: 75px;
-};
+}
+
+.profile-div{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.profile-header{
+    display: flex;
+    
+}
+
+.profile-personal-info{
+    background-color: RGB(230,240,240);
+    width: 350px;
+}
