--- a/flique/platforms/android/assets/www/templates/profile.html
+++ b/flique/platforms/android/assets/www/templates/profile.html
@@ -4,14 +4,14 @@
             <div class="profile-header">
                 
                 <img class="profile-picture" src="{{profile.image}}"/> 
-                <div class="profile-info">
+                <div class="profile-info" style="margin-left: 20px;margin-top: 5px;">
                     <h3>{{profile.firstName}} {{profile.LastName}}</h3> 
                     <h5>{{profile.work_place}} </h5>
                     <h5>{{profile.flique_number}} Total fliQues</h5>
                 </div>
             </div>
             
-            <div class="profile-personal-info">
+            <div class="profile-personal-info" style="margin-top: 8px;">
                 {{profile.personal_info}}
             </div>
         </div>
